# learn-rust-js-dep-graph

./: Cargo.toml
app/: index.js  thing.js
src/: cli.rs  graph.rs  main.rs
